# docs/swagger.yaml
@@ -8,13 +8,42 @@ definitions:
         type: string
       order_status:
         type: string
+    required:
+    - customer_id
+    - order_status
+    type: object
+  user.User:
+    properties:
+      firstname:
+        type: string
+      lastname:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - firstname
+    - lastname
+    - password
+    - username
+    type: object
+  user.UserSignUpDTO:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - password
+    - username
     type: object
   v1.IdResponse:
     properties:
       id:
         type: string
     type: object
-  v1.UploadResponse:
+  v1.errorResponse:
     properties:
       message:
         type: string
@@ -26,6 +55,82 @@ info:
   title: Order service
   version: "1.0"
 paths:
+  /auth/sign-in:
+    post:
+      consumes:
+      - application/json
+      description: authentification account
+      parameters:
+      - description: account info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/user.UserSignUpDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+      summary: SignIn
+      tags:
+      - auth
+  /auth/sign-up:
+    post:
+      consumes:
+      - application/json
+      description: create account
+      parameters:
+      - description: account info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/user.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+      summary: SignUp
+      tags:
+      - auth
   /v1/order:
     delete:
       description: Delete order by ID
@@ -41,15 +146,15 @@ paths:
         "400":
           description: Invalid parameters
           schema:
-            $ref: '#/definitions/v1.UploadResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "404":
           description: Order not found
           schema:
-            $ref: '#/definitions/v1.UploadResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "500":
           description: Server error
           schema:
-            $ref: '#/definitions/v1.UploadResponse'
+            $ref: '#/definitions/v1.errorResponse'
       summary: Delete order
       tags:
       - order
@@ -71,15 +176,15 @@ paths:
         "400":
           description: Invalid parameters
           schema:
-            $ref: '#/definitions/v1.UploadResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "404":
           description: Order not found
           schema:
-            $ref: '#/definitions/v1.UploadResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "500":
           description: Server error
           schema:
-            $ref: '#/definitions/v1.UploadResponse'
+            $ref: '#/definitions/v1.errorResponse'
       summary: Get order
       tags:
       - order
@@ -104,11 +209,11 @@ paths:
         "400":
           description: Invalid body
           schema:
-            $ref: '#/definitions/v1.UploadResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "500":
           description: Server error
           schema:
-            $ref: '#/definitions/v1.UploadResponse'
+            $ref: '#/definitions/v1.errorResponse'
       summary: Create order
       tags:
       - order
@@ -131,16 +236,21 @@ paths:
         "400":
           description: Invalid body
           schema:
-            $ref: '#/definitions/v1.UploadResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "404":
           description: Order not found
           schema:
-            $ref: '#/definitions/v1.UploadResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "500":
           description: Server error
           schema:
-            $ref: '#/definitions/v1.UploadResponse'
+            $ref: '#/definitions/v1.errorResponse'
       summary: Update order
       tags:
       - order
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
